--- a/src/components/containment/dialog.astro
+++ b/src/components/containment/dialog.astro
@@ -1,7 +1,7 @@
 ---
 import Icon from "../icon.astro";
 import IconButton from "../actions/icon-button.astro";
-interface props {
+interface Props {
 	type?: 'basic' | 'full',
 	id?: string,
 	className?: string,
