--- a/src/components/navigation/navigation-bar.astro
+++ b/src/components/navigation/navigation-bar.astro
@@ -1,7 +1,7 @@
 ---
 import Icon from "../icon.astro";
 import Badge from "../communication/badge.astro";
-interface props {
+interface Props {
 	json: string,
 	selected: string,
 	id?: string,
@@ -19,7 +19,7 @@ if (list.length < 3 || list.length > 5) {
 ---
 
 <div class:list={["container md-elevation-2", className]} id={id} slot={slot} style={style}>
-	{list.map((i, iter) => <div class="item" onclick={i[2]}>
+	{list.map((i: any, iter: number) => <div class="item" onclick={i[2]}>
 		{iter == parseInt(selected) ?
 				<div class="active md-shape-corner-full"><Icon>{i[1]}{i[3] && (i[3] == 'small' ? <Badge /> : <Badge number={i[3]} />)}</Icon></div> :
 				<Icon>{i[1]}{i[3] && (i[3] == 'small' ? <Badge /> : <Badge number={i[3]} />)}</Icon>}
