--- a/src/components/selection/time-picker.astro
+++ b/src/components/selection/time-picker.astro
@@ -9,7 +9,7 @@ interface Props {
 const { id, className, style, slot } = Astro.props
 ---
 
-<div class:list={["container md-motion-easing-emphasized md-motion-duration-short4 md-shape-corner-extra-small", className]} id={id} style={style} slot={slot} />
+<div class:list={["container md-motion-easing-emphasized md-motion-duration-short4 md-shape-corner-extra-small", className]} id={id} style={style} slot={slot}>
     <div class="input">
         <input type="time" id="text-input" class="md-typescale-body-large md-motion-easing-emphasized md-motion-duration-short4" required />
         <label class="label-text md-typescale-body-large md-motion-easing-emphasized md-motion-duration-short4" for="text-input">Date</label>
