Fix style prop being required in card

--- a/src/components/containment/card.astro
+++ b/src/components/containment/card.astro
@@ -1,7 +1,7 @@
 ---
 interface Props {
 	type?: 'elevated' | 'filled' | 'outlined',
-	style: string,
+	style?: string,
 	id?: string,
 	className?: string,
 	slot?: string
