Fix background color on cards

--- a/src/components/containment/card.astro
+++ b/src/components/containment/card.astro
@@ -23,7 +23,7 @@ const { type = 'elevated', style, id, className, slot } = Astro.props
 	}
 
 	.container.elevated {
-        background: var('--md-color-surface-container-low');
+        background: var(--md-color-surface-container-low);
 	}
 
 	.container.elevated::after {
