--- a/src/components/containment/card.astro
+++ b/src/components/containment/card.astro
@@ -35,6 +35,8 @@ const { type = 'elevated', style, id, className, slot } = Astro.props
         height: 100%;
         background:  var(--md-color-surface-tint);
         overflow: hidden;
+		pointer-events: none;
+		user-select: none;
 	}
 
 	.container.elevated:hover {
@@ -54,6 +56,8 @@ const { type = 'elevated', style, id, className, slot } = Astro.props
         height: 100%;
         background:  var(--md-color-surface-tint);
         overflow: hidden;
+        pointer-events: none;
+        user-select: none;
     }
 
     .container.filled:hover {
@@ -74,6 +78,8 @@ const { type = 'elevated', style, id, className, slot } = Astro.props
         height: 100%;
         background:  var(--md-color-surface-tint);
         overflow: hidden;
+        pointer-events: none;
+        user-select: none;
     }
 
     .container.outlined:hover {
