--- a/src/components/styles.astro
+++ b/src/components/styles.astro
@@ -2,9 +2,8 @@
 interface Props {
 	hex: string,
 	dark?: boolean,
-	imported?: boolean,
 }
-const { hex, dark = false, imported } = Astro.props
+const { hex, dark = false } = Astro.props
 
 import { themeFromSourceColor, argbFromHex, hexFromArgb } from "@material/material-color-utilities"
 
@@ -93,9 +92,17 @@ const styles = `
 
 <style is:global set:html={styles}></style>
 
-{!imported && <style is:global>@import url('https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap');</style>}
-
 <style is:global>
+    @font-face {
+        font-family: 'Roboto Flex';
+        font-style: normal;
+        font-weight: 100 1000;
+        font-stretch: 100%;
+        font-display: swap;
+        src: url(https://fonts.gstatic.com/s/robotoflex/v26/NaNNepOXO_NexZs0b5QrzlOHb8wCikXpYqmZsWI-__OGbt8jZktqc2V3Zs0KvDLdBP8SBZtOs2IifRuUZQMsPJtUsR4DEK6cULNeUx9XgTnH37Ha_FIAp4Fm0PP1hw45DntW2x0wZGzhPmr1YNMYKYn9_1IQXGwJAiUJVUMdN5YUW4O8HtSoXjC79QRyaLshNDUf3e0O-gn5rrZCu20YNau4OPE.woff2) format('woff2');
+        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+    }
+
 	.md-elevation-5 {
 		box-shadow: rgba(0, 0, 0, 0.1) 0 8px 12px 6px;
 	}
