--- a/src/components/icon.astro
+++ b/src/components/icon.astro
@@ -12,14 +12,14 @@ interface Props {
 	className?: string,
 }
 
-const { color = 'var(--md-color-on-surface)', fill = '0', weight = '400', grade = '0', size = '24px', style = "outlined", clearance = '0', slot } = Astro.props
+const { color = 'var(--md-color-on-surface)', fill = '0', weight = '400', grade = '0', size = '24px', style = "outlined", clearance = '0', slot, id, className } = Astro.props
 const materialClass = `material-symbols-${style}`
 const fillNum = parseInt(fill)
 const weightNum = parseInt(weight)
 const gradeNum = parseInt(grade)
 ---
 
-<span class={materialClass} slot={slot}><slot /><slot name="badge" /></span>
+<span class:list={[materialClass, className]} slot={slot} id={id}><slot /><slot name="badge" /></span>
 
 
 
